--- a/templates/tag/create.html
+++ b/templates/tag/create.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Delete Post</title>
+    <title>Create Tag</title>
 </head>
 <body>
-    <h1>Delete Post</h1>
-    <p>Are you sure you want to delete this post?</p>
-    <form  method="post">
+    <h1>Create Tag</h1>
+    <form method="post">
         {% csrf_token %}
-        <button type="submit">Yes, delete</button>
+        {{ form.as_p }}
+        <button type="submit">Create</button>
     </form>
 </body>
 </html>
